-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The follow crash message was observed (on the upstream-linux client).
If the pre-read needed for a sub-page write triggers read-ahead, this will happen.
We should probably just disable read-ahead for writes.
[ 1666.576466] LustreError: 3089:0:(cl_io.c:549:cl_io_read_ahead()) ASSERTION( io->ci_type == CIT_READ || io->ci_type
[ 1666.578761] LustreError: 3089:0:(cl_io.c:549:cl_io_read_ahead()) LBUG
[ 1666.579807] Pid: 3089, comm: loop3 5.2.0-rc2-00877-gca23fc4b3908 #278 SMP PREEMPT Mon Jul 22 10:32:24 AEST 2019
[ 1666.581132] Call Trace:
[ 1666.581519] libcfs_debug_dumpstack+0x67/0x84
[ 1666.582072] lbug_with_loc+0x33/0x75
[ 1666.582520] cl_io_read_ahead+0x86/0xd6
[ 1666.582979] ll_io_read_page+0x887/0x1089
[ 1666.583457] ll_write_begin+0x4fa/0x69b
[ 1666.583917] generic_perform_write+0xb4/0x193
[ 1666.584448] __generic_file_write_iter+0x12c/0x16c
[ 1666.585011] vvp_io_write_start+0x492/0x60c
[ 1666.585555] cl_io_start+0xef/0x105
[ 1666.586049] cl_io_loop+0xaa/0x1ec
[ 1666.586527] ll_file_io_generic+0x475/0x7ca
[ 1666.587131] ll_file_write_iter+0x224/0x274
[ 1666.587718] do_iter_readv_writev+0x13a/0x176
[ 1666.588308] do_iter_write+0x8b/0xff
[ 1666.588866] lo_write_bvec+0x74/0xf8
[ 1666.589374] loop_queue_work+0x376/0x8bc
[ 1666.589908] kthread_worker_fn+0xc3/0x154
[ 1666.590452] kthread+0x111/0x119
[ 1666.590892] ret_from_fork+0x24/0x30
- is related to
-
LU-9618 Connect readahead to prep_partial_page to improve small (< 1 page) write performance
-
- Resolved
-